# image-base64-via-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml  оцениваем-это.b64.txt
.github/workflows/: CI.yml
img_and_base64/: main.py
src/: lib.rs
